--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ package-mode = false
 [tool.poetry.dependencies]
 python = ">=3.9, <3.12"
 pyautogui = "^0.9.54"
+selenium = "^4.31.0"
+beautifulsoup4 = "^4.13.3"
+requests = "^2.32.3"
 
 
 [build-system]
